--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>sample code</title>
 </head>
 <body>
-    <p><h1>welcome to my git repo</h1></p>
+    <p><h1>welcome to my git repo!</h1></p>
 </body>
 </html>
